adapt profile and achievements for backend updates
